--- a/index.html
+++ b/index.html
@@ -112,10 +112,7 @@
 		}
 		.show { display: block; }
 		/*   BOOK FORMAT   */
-		.image{
-			background-size: cover;
-			border-bottom: 2px solid #306EFF;
-		}
+		.image{ border-bottom: 2px solid #306EFF; }
 		.image img {
 			height: 300px;
 			display: block;
