--- a/cart.html
+++ b/cart.html
@@ -85,7 +85,7 @@
 		.containers img {
 			height: 50px;
 			display: block;
-			max-width: 100%;
+			object-fit: contain;
 		}
 		.fullTotal {
 			font-size: 28px;
