--- a/cart.html
+++ b/cart.html
@@ -83,8 +83,8 @@
 			text-align: center;
 		}
 		.containers img {
-			height: 50px;
-			display: block;
+			height: 100px;
+			display: inline-block;
 			object-fit: contain;
 		}
 		.fullTotal {
