--- a/index.html
+++ b/index.html
@@ -157,12 +157,12 @@
 		/*   FACTS SECTION   */
 		#bookFacts {
 			width: 100%;
+			padding: 20px;
 			font-size: 18px;
 			line-height: 24px;
 			font-style: italic;
 			text-align: justify;
-			background-color: #1D2951;
-			padding: 20px 20px 40px 20px;
+			background-color: #000080;
 		}
 		/*   RESPONSIVE   */
 		@media only screen and (max-width: 400px) { .grids { grid-template-columns: 1fr; } }
